Add API to find runtime process, rename classes and small refactorings